[tool.poetry]
name = "repl_python3_Something-with-AI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.67"
aiinpy = "^0.0.17"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
